--- a/index.html
+++ b/index.html
@@ -17,9 +17,12 @@
             <div class="caixa-alternativas"></div>
             <div class="caixa-resultado">
                 <p class="texto-resultado"></p>
+                <button class="novamente-btn">Jogar Novamente</button>
             </div>
         </div>
-        <script src="main.js"></script>
+        <script type="module" src="aleatorio.js"></script>
+        <script type="module" src="perguntas.js"></script>
+        <script type="module" src="main.js"></script>
     </body>
 
 </body>
